--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,6 +24,14 @@ a {
     color: var(--noir);
 }
 
+ i {
+    color: var(--bleu);
+ }
+
+ ul {
+    list-style: none;
+ }
+
 /* FIN GÉNÉRAL */
 
 /* HEADER */
@@ -66,6 +74,7 @@ nav a:hover {
 
 /* MAIN */
 
+
 #section1 h1 {
     font-size: 22px;
     font-weight: 700;
@@ -98,6 +107,10 @@ nav a:hover {
     justify-content: center;
     padding: 0 15px; 
     border-radius: 15px 0 0 15px;
+}
+
+.icon-container > * {
+    color: var(--noir);
 }
 
 .search-bar input {
@@ -208,7 +221,7 @@ nav a:hover {
 }
 
 .hebergements {
-    width: 60%;
+    width: 65%;
     background-color: var(--gris);
     border-radius: 25px;
     padding: 30px;
@@ -227,7 +240,7 @@ nav a:hover {
     background-color: white;
     padding: 5px;
     margin-top: 33px;
-    border-radius: 15px;
+    border-radius: 20px;
     box-shadow: 5px 5px 10px #DADADA;
 }
 
@@ -260,9 +273,139 @@ nav a:hover {
     font-weight: bold;
 }
 
+#read-more {
+    font-size: 18px;
+    margin-top: 30px;
+}
+
+.populaires {
+    width: 34%;
+    background-color: var(--gris);
+    border-radius: 25px;
+    padding: 30px;
+    box-sizing: border-box;
+}
+
+.populaires-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card {
+    background-color: white;
+    border-radius: 25px;
+    padding: 5px;
+    box-shadow: 5px 5px 10px #DADADA;
+}
+
+.populaires-cards .card {
+    display: flex;
+    margin-top: 33px;
+}
+
+.populaires-cards img {
+    width: 33%;
+    height: 136px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+.populaires-cards .card-content {
+    width: 67%;
+    padding-left: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-sizing: border-box;
+}
+
+.populaires-cards .card-title {
+    margin-top: 10px;
+    margin-bottom: 4px;
+}
+
+.populaires-cards .card-subtitle {
+    margin: 0;
+}
+
+.populaires-cards .card-rating {
+    margin-bottom: 5px;
+}
+
 /* FIN DES HEBERGEMENTS & POPULAIRES */
 
+/* ACTIVITES */
 
+#section-activites {
+    margin-bottom: 35px; /* Espacement entre la section activités et le footer à régler*/
+    padding: 30px;
+}
+
+#section-activites h2 {
+    font-size: 22px;
+    margin-top: 0;
+    margin-bottom: 30px; /* Espacement entre le titre et les cartes */
+}
+
+.activities-list {
+    display: flex;
+    flex-wrap: flex-start; /* Les cartes restent sur la même ligne */
+    gap: 30px; /* Espacement entre les cartes */
+}
+
+.activities-card {
+    width: 30%;
+}
+
+.activities-card article {
+    background-color: #ffffff;
+    border-radius: 20px;
+    box-shadow: 5px 5px 15px #DADADA;
+    overflow: hidden; /* Les images ne débordent pas */
+}
+
+.activities-card img {
+    width: 100%;
+    height: 380px;
+    object-fit: cover; /* Les images sont coupées si elles dépassent la hauteur */
+    border-radius: 20px 20px 0px 0px;
+}
+
+.activities-card h3 {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 16px;
+    padding: 20px 19px;
+    gap: 10px;
+    margin: 0px;
+}
+/* FIN DES ACTIVITES */
+
+/* FOOTER */
+
+.footer-page {
+    background-color: var(--gris);
+    display: flex;
+    justify-content: flex-start;
+    padding: 0 35px;
+    margin-bottom: -10px;
+}
+
+.footer-row {
+    width: 33%;
+}
+
+.footer-row ul {
+    padding-left: 0;
+    line-height: 30px;
+}
+
+.footer-row li {
+    margin-top: 0;
+}
+/* FIN DU FOOTER */
 
 /* Media Queries */
 
