--- a/CSS/style.css
+++ b/CSS/style.css
@@ -417,8 +417,8 @@ nav a:hover {
 
 /* Media Queries */
 
-/* Tablettes (>=768px et <=1024px) */
-@media (min-width: 768px) and (max-width: 1024px) {
+/* Tablettes */
+@media screen and (max-width: 1024px) and (min-width: 768px) {
 
 }
 
