--- a/CSS/style.css
+++ b/CSS/style.css
@@ -76,6 +76,7 @@ nav {
 nav a {
     font-size: 16px;
     font-weight: 400;
+    text-align: center;
     /*margin-left: 20px;*/
     text-decoration: none;
     color: var(--noir);
