--- a/CSS/style.css
+++ b/CSS/style.css
@@ -82,6 +82,7 @@ nav a {
     color: var(--noir);
     padding-top: 20px;
     padding-bottom: 70px;
+    border-top: 2px solid transparent; /*Bordure transparente pour le hover*/
 }
 
 nav a:hover {
@@ -140,7 +141,7 @@ nav a:hover {
     border: 1px solid #F2F2F2;
     border-left: none;
     flex-grow: 1;
-    max-width: 200px;
+    max-width: 210px; /*Ancien max-width: 200px;*/
     height: 100%; 
     box-sizing: border-box;
 }
@@ -167,6 +168,10 @@ nav a:hover {
 }
 /* LES FILTRES */
 
+.filtres-section {
+    margin-top: 35px;
+}
+
 .filtres {
     display: flex;
     align-items: center;
@@ -192,10 +197,11 @@ nav a:hover {
     background-color: white;
     border-radius: 25px;
     border: 2px solid var(--gris);
-    padding: 10px 30px;
+    padding: 10px 20px; /*Ancien padding 10px 30px*/
     font-weight: bold;
     cursor: pointer; 
     font-size: 16px;
+    height: 50px;
 }
 
 .filtre-boutons > *:hover {
@@ -204,6 +210,11 @@ nav a:hover {
 /* Fin des filtres */
 
 /* INFO CONTAINER */
+
+.info-section {
+    margin-top: 35px;
+    margin-bottom: 35px;
+}
 
 .info-container {
     display: flex;
@@ -309,6 +320,10 @@ nav a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.populaires-title i {
+    color: var(--bleu);
 }
 
 .card {
@@ -420,7 +435,7 @@ nav a:hover {
     background-color: var(--gris);
     display: flex;
     justify-content: flex-start;
-    padding: 0 35px;
+    padding: 20px;
     margin-bottom: -10px;
 }
 
@@ -542,21 +557,152 @@ nav a:hover {
     .menu-header a {
         width: 50%;
         border-bottom: 2px solid var(--gris);
-        border-top: 0;
-        padding-bottom: 3px;
-        padding-top: 0;
+        border-top: 2px solid transparent; /* Ajout d'une bordure transparente */
+        padding-bottom: 15px; /* Ajustement du padding */
+        padding-top: 15px; /* Ajout d'un padding en haut */
     }
 
-/*
+    .menu-header a:hover {
+        border-bottom: 2px solid var(--bleu);
+        border-top: 2px solid transparent;
+        padding-top: 15px; /* Maintien du padding en haut */
+        padding-bottom: 15px; /* Maintien du padding en bas */
+    }
+
+    /* Search section */
+    
+    .search-section {
+        padding: 0 20px;
+    }    
+
     #rechercher-desktop {
         display: none;
     }
 
     #rechercher-mobile {
         display: block;
+        margin-left: -10px;
     }
-        */
 
+    button#rechercher-mobile {
+        border-radius: 15px;
+    }
+
+    /*Filtres*/
+
+    .filtres-section {
+        display: flex;
+        padding: 0 20px;
+    }
+
+    .filtre-boutons {
+        display: grid; /* Utilisation de grid pour répartir les boutons sur 2 colonnes */
+        grid-template-columns: 1fr 1fr; /* 2 colonnes de largeur égale */
+        gap: 10px; /* Espacement entre les boutons */
+        width: 100%;
+    }
+
+    .filtre-boutons > * {
+        width: 100%;
+        text-align: center;
+        box-sizing: border-box;
+        min-width: 0;
+        font-size: 14px;
+    }
+
+    /* info section */
+
+    .info-section {
+        padding: 0 20px;
+    }
+
+    /* Hebergements & Populaires */
+    
+    .hebergements-populaires {
+        flex-direction: column-reverse;
+        gap: 15px;
+    }
+
+    .populaires {
+        width: 100%;
+        border-radius: 0; /* Suppression des coins arrondis */
+        padding: 30px 20px; /* Espacement interne défini sur la maquette Figma*/
+    }
+
+    .hebergements {
+        display: block;
+        width: 100%;
+        padding: 20px;
+        margin-bottom: 35px;
+        background-color: transparent;
+    }
+
+    .hebergements-cartes {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px; /* Espacement entre les cartes */
+    }
+
+    .carte-cliquable {
+        width: 97%;
+        margin-top: 0; /* Suppression de l'espacement entre les cartes pour coller à la maquette Figma*/
+    }
+
+    #read-more {
+        margin-top: 15px;
+    }
+
+
+    /* Section Activités */
+
+    #section-activites {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0 30px;
+    }
+
+    .activities-list {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px;
+    }
+
+    .activities-card {
+        width: 100%;
+    }
+
+    .activities-card img {
+        width: 100%;
+        height: 141px; /* Hauteur des images sur mobile prise sur la maquette Figma*/
+    }
+    
+    /* Footer */
+
+    .footer-page {
+        flex-direction: column;
+        padding: 30px;
+        gap: 50px;
+    }
+
+    .footer-row {
+        width: 263px;
+    }
+
+    .footer-row .row-title {
+        margin-bottom: 15px;
+    }
+
+    .footer-row ul {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px; /* Espacement entre les liens */
+    }
+    
 }
 
 /* FIN DES MEDIA QUERIES */
