--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,13 @@
 /* Général */
 
-* {
+body, a, ul {
     font-family: 'Raleway', sans-serif;
     text-decoration: none;
-    margin: 0; /*Réinitialise les marges*/
+    margin: 0;
+}
+
+ul {
+    list-style: none;
 }
 
 :root {
@@ -18,7 +22,6 @@
     max-width: 1440px;
     padding: 0 50px;
     box-sizing: border-box;
-    /*margin: 0 auto; /* Centre le main conteneur */
 }
 
 body {
@@ -30,24 +33,9 @@ a {
     color: var(--noir);
 }
 
- /*i {
-    color: var(--white);
- } */
-
- ul {
-    list-style: none;
- }
-
 /* FIN GÉNÉRAL */
 
 /* HEADER */
-
-/*header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
-}   */
 
 .header-page {
     display: flex;
@@ -67,7 +55,6 @@ a {
 
 nav {
     display: flex;
-    /*justify-content: space-between;*/
     gap: 50px;
     font-size: 16px;
     margin-top: 5px;
@@ -77,7 +64,6 @@ nav a {
     font-size: 16px;
     font-weight: 400;
     text-align: center;
-    /*margin-left: 20px;*/
     text-decoration: none;
     color: var(--noir);
     padding-top: 20px;
@@ -142,7 +128,6 @@ nav a:hover {
     border-left: none;
     flex-grow: 1;
     width: 100%;
-    /*max-width: 200px; */
     height: 100%; 
     box-sizing: border-box;
 }
@@ -266,22 +251,28 @@ nav a:hover {
     justify-content: space-between;
 }
 
+.carte-cliquable, .card {
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 5px 5px 10px #DADADA;
+}
+
+.carte-cliquable img, .card img {
+    object-fit: cover;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
 .carte-cliquable {
     width: 30%;
     min-width: 120px;
-    background-color: white;
     padding: 5px;
     margin-top: 33px;
-    border-radius: 20px;
-    box-shadow: 5px 5px 10px #DADADA;
 }
 
 .carte-cliquable img {
     width: 100%;
     height: 120px;
-    object-fit: cover;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
 }
 
 .carte-titre {
@@ -329,14 +320,7 @@ nav a:hover {
 }
 
 .card {
-    background-color: white;
-    border-radius: 25px;
     padding: 5px;
-    box-shadow: 5px 5px 10px #DADADA;
-}
-
-.card img {
-    object-fit: cover;
 }
 
 .populaires-cards .card {
@@ -420,18 +404,22 @@ nav a:hover {
     width: 30%;
 }
 
+.activities-card article, .activities-card img {
+    border-radius: 20px;
+}
+
 .activities-card article {
     background-color: #ffffff;
-    border-radius: 20px;
     box-shadow: 5px 5px 15px #DADADA;
-    overflow: hidden; /* Les images ne débordent pas */
+    overflow: hidden;
 }
 
 .activities-card img {
     width: 100%;
     height: 380px;
-    object-fit: cover; /* Les images sont coupées si elles dépassent la hauteur */
-    border-radius: 20px 20px 0px 0px;
+    object-fit: cover;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 .activities-card h3 {
